[tool.poetry]
name = "cipher_shin_hyunyoung"
version = "0.1.0"
description = "Python package for cipher function"
authors = ["Hyunyoung Shin <hs3158@columbia.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
